<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Arkanoid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_gra">GraActivity</string>
    <string name="button_start">Start</string>
    <string name="button_opcje">Opcje</string>
    <string name="button_autorzy">Autorzy</string>
    <string name="button_wyjscie">Wyjście</string>
    <string name="button_powrot">Powrót</string>
    <string name="button_koniecWyjscie">Wyjdź do menu</string>
    <string name="radio_latwy">Łatwy</string>
    <string name="radio_sredni">Średni</string>
    <string name="radio_trudny">Trudny</string>
    <string name="checkBox_muzyka">Muzyka On/Off</string>
    <string name="title_activity_opcje">OpcjeActivity</string>
    <string name="title_poziom">Poziom Trudności</string>
    <string name="title_activity_autorzy">AutorzyActivity</string>
    <string name="title_autorzy">Autorzy</string>
    <string name="title_activity_koniec">KoniecActivity</string>
</resources>
