<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/tlo"
    tools:context="com.example.arkanoid10.MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="400dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/logoarkanoid" />

    <Button
        android:id="@+id/buttonNowaGra"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
		android:layout_marginTop="40dp"
        android:background="@color/Przycisk"
        android:text="@string/button_start" 
        android:onClick="rozpocznijGre"
        style="@style/Buttons" />

    <Button
        android:id="@+id/buttonOpcje"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/buttonNowaGra"
		android:layout_marginTop="20dp"
        android:background="@color/Przycisk"
        android:text="@string/button_opcje"
        android:onClick="wyswietlOpcje"
        style="@style/Buttons" />

    <Button
        android:id="@+id/buttonAutorzy"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonOpcje"
        android:layout_centerHorizontal="true"
		android:layout_marginTop="20dp"
        android:background="@color/Przycisk"
        android:text="@string/button_autorzy" 
        android:onClick="wyswietlAutorow"
        style="@style/Buttons"/>
        
   <Button
        android:id="@+id/buttonWyjscie"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonAutorzy"
        android:layout_centerHorizontal="true"
		android:layout_marginTop="20dp"
        android:background="@color/Przycisk"
        android:text="@string/button_wyjscie" 
        android:onClick="zamknijAplikacje"
        style="@style/Buttons"/>

</RelativeLayout>
